	ADD: Added all the missing animations for the three tunics (#27).
	ADD: Added a star switch manager script to use one function for all hole switches (#152).
	ADD: Added item folders.
	ADD: Added Bari colour variations (#143).
	ADD: Added soldier colour variations.
	ADD: Rescripted the feather (#144).
	ADD: Added enemy:is_frozen() and enemy:set_frozen() methods.
	CHG: Redone Spectral Ganon's sprite (#29).
	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
	CHG: Moved the green house in the east of the castle.
	CHG: Rewrote the game intro dialogues (#8).
	CHG: Changed chicken hit values.
	CHG: Renamed dungeon tilesets (#133).
	CHG: Remade the introduction cinematic slides (#86).
	CHG: Improved the shovel usability (#26).
	CHG: Moved hero animations into specific folders (#27).
	CHG: Grouped hero animations into one file instead of different ones for each tunic (#47).
	CHG: Unified the "dialogue_id" property for all signs (#34).
	CHG: Moved small key and clock HUD positions.
	CHG: Switched the dungeons 10 and 12 (#165).
	CHG: Progressively switch enemies behaviour to ALTTD's.
	CHG: Moved the piece of heart #15 from L1 to K2.
	CHG: Restored the graveyard music for the Kakarico Graveyard.
	CHG: Replaced "Linkff" by "LinkFF" in the project database.
	CHG: Updated the hero head sprite with the actual tunic colours.
	CHG: Lowered the Tektites' damage values (#177).
	CHG: Changed the Armos sprite palette.
	CHG: Updated the Octoroks' sprites.
	CHG: Changed Link's animation to stopped after bonking against a wall.
	CHG: Updated the enemy weapon script from ALTTD.
	CHG: Renamed the castle as dungeon 16.
	CHG: Finished rescripting the Ice Rod.
	CHG: Rescripted the Fire Rod.
	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
	FIX: Fixed case sensibility issues (#133).