@@ -374,6 +374,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	ADD: Added soldier colour variations.
 	ADD: Rescripted the feather (#144).
 	ADD: Added enemy:is_frozen() and enemy:set_frozen() methods.
+	ADD: Added the ability to use jumpers when running.
 	CHG: Redone Spectral Ganon's sprite (#29).
 	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
 	CHG: Moved the green house in the east of the castle.
@@ -400,6 +401,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Renamed the castle as dungeon 16.
 	CHG: Finished rescripting the Ice Rod.
 	CHG: Rescripted the Fire Rod.
+	CHG: Increased the running speed from 192 to 256.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
